--- a/games.html
+++ b/games.html
@@ -2,7 +2,7 @@
 	<title>
     Games - Mia's EPIC Site
     </title>
-	<meta name="description" content="find the Silver caN you Finde him HFInd hte silver NO YOU CARNT 😡😡😡😡😡😡😡😡">
+	<meta name="description" content="find the Silver caN you Finde her HFInd hte silver NO YOU CARNT 😡😡😡😡😡😡😡😡">
 	<style>
 	html, body {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#000000 10%,#FFFFFF 20%, rgba(0, 0, 0, 0) 30%)}
@@ -87,7 +87,7 @@
 	<iframe frameborder="0" src="https://itch.io/embed/1508797?border_width=5&amp;bg_color=22b14c&amp;fg_color=000000&amp;link_color=ffffff&amp;border_color=00290d" width="560" height="175"><a href="https://miagaming.itch.io/find-the-silvers-2">F ind hte SIVLERs 2 !!!!1!!!!11!1!1!1 by Mia</a></iframe>
 	</div>
 	</th>
-	<td><h4>the find the silver 2</h4>A new look on the "Find the " Silver Franchise! Silver Returns with this Hit GAme "Find the Silver 2" where he uh he goes off the screen uh OH!<br><br>"A very good game, i love finding all the silvers, silver is very cute and it's funny when he hides but fucking fails miserably"<br>- Batashock, 1997</td>
+	<td><h4>the find the silver 2</h4>A new look on the "Find the " Silver Franchise! Silver Returns with this Hit GAme "Find the Silver 2" where she uh she goes off the screen uh OH!<br><br>"A very good game, i love finding all the silvers, silver is very cute and it's funny when she hides but fucking fails miserably"<br>- Batashock, 1997</td>
 	</tr>
 	<tr>
 	<th>
@@ -95,7 +95,7 @@
 	<img src="assets/tilingimage2.png" width="560" height="175"/>
 	</div>
 	</th>
-	<td><h4>who</h4>Who Who Who<br>PLZ ALL PLZ HELP I DON'T WANT TO<br>popular and Well rated  <br> Click <span title="https://miagaming.itch.io/find-the-silver-3"> here</span> To see The REvieS!!!! is very cute and it's funny when he hides but fu£ÃƒÆ’Ã¢â‚y"<br>- BFind the 4 Fin997</td>
+	<td><h4>who</h4>Who Who Who<br>PLZ ALL PLZ HELP I DON'T WANT TO<br>popular and Well rated  <br> Click <span title="https://miagaming.itch.io/find-the-silver-3"> here</span> To see The REvieS!!!! is very cute and it's funny when she hides but fu£ÃƒÆ’Ã¢â‚y"<br>- BFind the 4 Fin997</td>
 	</tr>
 	<tr>
 	<th>
