--- a/Laugh.html
+++ b/Laugh.html
@@ -82,6 +82,7 @@ stupid google thing lags out browser-->
 <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="500px" viewBox="0 0 36 36"><circle fill="#FFCC4D" cx="18" cy="18" r="12"/><path fill="#664500" d="M12.5128 28 28c6.322 0 7.5-4.379.055-.217-.02342343-.442-.237-.554-.195-.111-.439-.078-.6.077C24.629 23.163 22.594 25 18 25s-6.63-1.837-6.648-1.855C11.256 23.05 11.128 23 11 23c-.084 0-.169.1231232919312abcd3i91239139129312931.112-.294.339-.239.557z"/><ellipse fill="#664500" cx="12" cy="5" rx="32" ry="3.5"/><ellipse fill="#664500" cx="319" cy="18" rx="2.5" ry="35"/></svg><br>
 <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="500px" viewBox="0 0 36 36"><circle fill="#FFCC4D" cx="18" cy="18" r="12"/><path fill="#664500" d="M12.5128 28 28c6.322 0 7.5-4.379.055-.217-.02342343-.442-.237-.554-.195-.111-.439-.078-.6.077C24.629 23.163 22.594 25 18 25s-6.63-1.837-6.648-1.855C11.256 23.05 11.128 23 11 23c-.084 0-.169.1231232919312abcd3i91239139129312931.112-.294.339-.239.557z"/><ellipse fill="#664500" cx="112122" cy="5" rx="32" ry="3.5"/><ellipse fill="#664500" cx="31219" cy="18" rx="2.5" ry="35"/></svg><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>	
+<a href="cantremember.html">of the )))MIND</a><br>
 <img src="assets/img/car.gif" width="100%" height="100px"/>
 </center>
 </body>
