--- a/THETRUTH.html
+++ b/THETRUTH.html
@@ -75,6 +75,65 @@
 		font-size: 35px;
 		font-family: silver;
 	}
+	.p10{
+	    color: #baf1ab;
+		font-size: 50px;
+		font-family: "Times New Roman";
+	}
+	.p11{
+	    color: #ffaabb;
+		font-size: 22px;
+		font-family: "Times New Roman";
+	}
+	.p12{
+	    color: #b000b5;
+		font-size: 30px;
+		font-family: "Times New Roman";
+		transform: skew(-20deg, 0deg);
+	}
+	.p13{
+	    color: #ggg333;
+		font-size: 10px;
+		font-family: "Times New Roman";
+		transform: skew(20deg, 0deg);
+	}
+	.p14{
+	    color: #123456;
+		font-size: 60px;
+		font-family: "Times New Roman";
+	}
+	.p15{
+	    color: #654321;
+		font-size: 14px;
+		font-family: "Times New Roman";
+	}
+	.p16{
+	    color: #ABC321;
+		font-size: 20px;
+		font-family: "Times New Roman";
+	}
+	.p17{
+	    color: #ABCDEF;
+		font-size: 30px;
+		font-family: "Times New Roman";
+	}
+	.p18{
+	    color: #FEDCBA;
+		font-size: 21px;
+		font-family: "Times New Roman";
+	}
+	.p19{
+	    color: #123ABC;
+		font-size: 46px;
+		font-family: silver;
+		background-image:url(assets/truth.png);
+		background-size: 20px;
+	}
+	.p20{
+	    color: #AAAFFF;
+		font-size: 18px;
+		font-family: "Times New Roman";
+	}
 	</style>
 </head>
 <b>
@@ -94,6 +153,17 @@
 <br>
 <br>
 <div class="coldtruth">
+<p class="p20">i am going to going to Experioment on this Ppper Cat ( ((  i m gOing to figureo ut its WOrks how To figure Out its INsides. I am going to Find Out Scientifically and REligiously What the PAPER CAT is ?! ?and how to CLEANSE IT FROM this World! i am going to EXTERMINATE all the PAPER CAATS i aam Going to FInd out Their WEaknes AND I AM GOING TO BECAUSE THEY ARE DEMONS AND BECAUSE THEY ARE AGAINST THE HOLY WORD OF GOD</p>
+<p class="p19"> I FOUND A PAPER CAT, I THINK ITS A BABY, I FOUND IT IN THE TREES, ITS EYES ARE BLUE, I PHOTOCOPY IT HERE LOOK <img src="assets/papsmear.png" width="400px" height="200px"/>(Not acurat Size i'mm Sorry)</p>
+<p class="p18"> I am going today to prov e the papercat To find one and Bring it home with me To figure Out their' Weakness</p>
+<p class="p17"> there is a paper cat she name the silver short... Silver shorthair Silver short "hair" despit having NO HAIR" what is this Name? is it a Fake name? Is silver Even a Name you Would Give You Your Child ??? ? ? ?? ? ? ?</p>
+<p class="p16">they told me today I was good at Researching the Paper Cat! {{{{{{ I WIll " Answer YOur questions if you Email _Me Me</p>
+<p class="p15">i think into a <a href="https://www.conservapedia.com/Pocket_billiards">Poc</a>ket Dimenson</p>
+<p class="p14">where does t store is Organisms????????</p>
+<p class="p13">I THEY TELLME THEY TELL ME THE BEGINNING WHAT IS THE BEGINNING ALL THERE IS IS <a href="https://soundcloud.com/will917/thebeginning">THIS</a> BUT IT DOESN'T MEAN ANYTHING BUT THEY TELL ME THATS THE FIND THE GAME 3 BUT I CANNOT BECAUSE ALL IT IS IS A BEEP AND A TALKING ROBOT IT IS NOT A FINDING THE SILVER 3 !! YOU LIERS! YOU LIE ABOUT THE FINDOING GAME BUT THERE IN TRUTH IS NO FINDING GAME AVALIABLE O ME AT THE MOMENT BUT IN THE FUTURE THERE WILL BE A FINDING GFAME AND I WILL GET IT AND I WILL LEARN THE WEAKNESS AND BRING THE DOWNFALL OF THE PAPEAR CATRTS!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</p>
+<p class="p12">i have Consumed all the Silver_Shorthair Media avaliable Right NOw(7:20PM) and Cannot FInd the REAl DEATH of SILVER SHORTHAIR weaKNESS!!!!! but I did figure out that there is No Finding Game 3!!! (One With the Silver) And i am Curus! P PP P PP I WANT THIS CREATURE D_EAD-</p>
+<p class="p11">day 1 0 of Trying to find the weakenes Of silver Shorting ! ! So basicall THere is a Paper Cat And she is Called "SIlver SHORTHAIR" and shes a D*MON from H*LL that FUCKS US ALL over by bEING FLAT AND D*MONIC</p>
+<p class="p10">I MUST DESTROY THE PIPPY CIT</p>
 <p class="p9"><b>&dagger;&dagger;&dag</b>ger;<--- this is what SILVER The DEMON hides behind she hides behind this FORM she is the NOT THIS she is NOT THIS THIS IS A FAKE AN ILLUSION THIS IS NOT THE REAL PERSON THIS IS NOT REAL A DEMON IS HIDNIG BEHIND THIS YOU CANOT SE HIM BUT she IS IA DEMON AND YOU SHOULD NOT TRUST HIM DO NOT TRUST HIM TO NO  D TRUSH HIM she OT TIRSH HIM OD NOT TRUSH TH DO NOT TRUST THIS MAN (aka. Etc)    )) )  [sic]</p>
 <p class="p8">if you are READING this and you AGREE With the what i say then plea CONTACT ME at <span id="email">😀</span> and we can ARRANGE a meeting and we can Discuss and TAKE ACTION to the SILVER DEMOS ! ! </p>
 <p class="p7">"cats" are DOMANS sent from h*ll to RUIN our lives and fill them with SIN and GREED, but someimes the DEMONS fuck it up  (really Bad) this sometimes and okay and it sometimes this happens and this is why there is a "SIVLER SHORHTAIR" she is a cat but they accidently made her made of PAPER! Oopsies! THEY ARE STUPID! AND DEMON! </p>
