--- a/core.html
+++ b/core.html
@@ -6,11 +6,13 @@
 	<link rel="icon" type="image/x-icon" href="assets/favicon.ico"></head>
 <body>
 <center>
-<a href="LEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARNLEARN"></a>
 </center>
 <script>
 const redirects = [
   "https://www.youtube.com/watch?v=dMUi2PFOGew",
+  "https://silvershorthair.github.io",
+  "https://silvershorthair.github.io",
+  "https://silvershorthair.github.io",
   "https://silvershorthair.github.io",
   "https://www.reddit.com/r/ProgrammerHumor/comments/y26na6/we_turned_off_our_old_jenkins_server_today_we/",
   "game.html",
@@ -36,11 +38,20 @@ const redirects = [
   "https://www.google.com/search?q=finally+its+working+ambergris",
   "https://www.echemi.com/cms/40233.html",
   "https://www.youtube.com/watch?v=zNaecx7MzVM",
-  "https://www.slideshare.net/Will917/december-12th-2014"
+  "https://www.slideshare.net/Will917/december-12th-2014",
+  "portfolio.html",
+  "https://youtube.com/@Silly915?sub_confirmation=1",
+  "https://www.crosswordsolver.org/clues/v/very-silly.315280",
+  "https://crossword-solver.io/clue/very-silly/",
+  "https://www.the-crossword-solver.com/word/very+silly",
+  "https://www.danword.com/crossword/Very_silly",
+  "https://crosswordgenius.com/clue/very-silly",
+  "https://www.wordplays.com/crossword-solver/very-silly"
 ];
 min = Math.ceil(0);
-max = Math.floor(27);
+max = Math.floor(36);
 fart2 = Math.floor(Math.random() * (max - min) + min);
 fart = redirects[fart2];
 window.location.replace(fart);
 </script>
+<a href="cone.html">YOU HAVE ERROR CLICK _ EXCEPTION _ TO RESOLVE"DO NOT</a>
