--- a/game.html
+++ b/game.html
@@ -38,7 +38,9 @@
 	<center>
 	<h1> Games </h1>
 	<span id="menulinks">WANT TO PLAY A ))GAME((</span>
-	<script src="links2.js" type="text/javascript"></script>	</center>
+	<script src="links2.js" type="text/javascript"></script>
+	<a href="https://youtu.be/yxKcMQw0e40" class="links"> </a>
+	</center>
 	<br>
 </div>
 <center>
