--- a/abouthim.html
+++ b/abouthim.html
@@ -118,6 +118,21 @@
 		background-size: 500px;
 		padding: 10px;
 	}
+	.week1{
+		background-image: url('assets/week1.png');
+		background-size: 50px;
+		padding: 10px;
+	}
+	.week2{
+		background-image: url('assets/week2.png');
+		background-size: 100px;
+		padding: 10px;
+	}
+	.week3{
+		background-image: url('assets/week3.png');
+		background-size: 100px;
+		padding: 10px;
+	}
 	.nins{
 		background-image: url('assets/ohgod2.png');
 		background-size: 100px;
@@ -200,6 +215,18 @@ AUDI_!))!
 <br>
 <br>
 <h1>Check   10   My Newest Vid))EO(s)</h1>
+<div class="week3">
+<br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/K1AdEZjIgnU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div class="week2">
+<br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/07LcgKTsMHo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div class="week1">
+<br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/XlKFV7eq-fo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 <div class="New">
 <br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7ZMZ5t58TOI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
