--- a/THETRUTH.html
+++ b/THETRUTH.html
@@ -139,11 +139,25 @@
 <b>
 <br>
 	<center>
-	<h1> THE TRUTH BEHIND SILVER SHORTHAIR &dagger;</h1>
+	<h1> THE TRUTH BEHIND SILVER SHORTHAIR &dagger; <br>&<br>THE PROBLEM WITH PAPER CATES </h1>
 	<span id="menulinks">The Truth Behind Behind</span> <----- "SILVERS" LIES
 	<script src="links2.js" type="text/javascript"></script>
 	<br>
 <br>
+<div style="float: left; border: 1px solid blue; margin: 1px;">
+<table style="width: 238px; background: #EEE;">
+<tbody><tr>
+<td style="width: 45px; height: 45px; background: blue; text-align: center; font-size: 14pt; color: #000;"><img src="assets/papsmear.png" width="40px" height="45px"/>
+</td>
+<td style="font-size: 8pt; padding: 4pt; line-height: 1.25em; color: #000;">This user votes against <b>Paper Cats because they are DEMONS</b>.
+</td></tr></tbody></table></div>
+<div style="float: left; border: 1px solid blue; margin: 1px;">
+<table style="width: 238px; background: #EEE;">
+<tbody><tr>
+<td style="width: 45px; height: 45px; background: blue; text-align: center; font-size: 14pt; color: #000;"> width="45px" height="45px"/>
+</td>
+<td style="font-size: 8pt; padding: 4pt; line-height: 1.25em; color: #000;">This user is a proud res<b>earcher of PAer cat</b> b.
+</td></tr></tbody></table></div><br>
 <br>
 <br>
 <p class="p1">THIS IS THE TRUTH BEHIND SILVER SHORTHAIR</p>
@@ -153,6 +167,29 @@
 <br>
 <br>
 <div class="coldtruth">
+<h2> i don't the paper cat </h5>
+<p> i cannot be forgiven, i have Stepped to Far . But i must do what i must :t o save the wolrd from these Paping cats</p>
+<br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br>
+<h6> i sinned</h6>
+<h1> i wrapped the paper cat on it </h1>
+<h1> i skinned it</h1>
+<h1> I FOUND A REAL  CAT ( a demon but a Less Disgraceful Obne)</h1>
+<p>paper cat please answerm e why are you so why are you like this how did you do it how did you become so how are you the paper how are you so thin how do you exist how does it work why its a inposible for a cat to be so small it doest wrok its you ct have your organs in a very small spot i it doesnt work yet the paper cat can strug-gle but it why does it wokr</p>
+<h3>The paper cat is still aliveHow is it still, I cut it I DO it o make it DEATH but it Grows back again why P IWHY </h3>
+<h6 style="float:left; width:250px;"> THEY say to do it they Say tO REDUCE my skin to PAper , I will not Torment MYself __ TO the level of those Unnatural Beasts<br> Butimust, In orDER to defaeat the Paper cat i Must vbvecme the pAepr catM, I will start the Process this Saturday!_!__!{{{</h6>
+<h1> i am loyal i will not harvest them   i will discard of them imagine if the wrong people this hands gotten them what if </h1>
+<h3> I think the Paperia Cat has UNNATURAL _ regeneration ABILITIES </h3>
+<h4>i cut the cat it grows it back<br>i cut the cat it grows it back<br>i cut the cat it grows it back<br>i cut the cat it grows it back</h4>
+<h2> wikipedia the "FREE" encyclopedia keeps REMOVING my ARTCILES about PAPER CAT </h2>
+<p> what Paper cats Do to People <br> - car Accidents <br> - vagoniplasty <br> - Get rid of Morales <br> - not natural <br> - remove Babies <br> - What paper cats Do to peopel and this IS why you should Donate now to ERADICATE papre Cat</p>
 <p class="p20">i am going to going to Experioment on this Ppper Cat ( ((  i m gOing to figureo ut its WOrks how To figure Out its INsides. I am going to Find Out Scientifically and REligiously What the PAPER CAT is ?! ?and how to CLEANSE IT FROM this World! i am going to EXTERMINATE all the PAPER CAATS i aam Going to FInd out Their WEaknes AND I AM GOING TO BECAUSE THEY ARE DEMONS AND BECAUSE THEY ARE AGAINST THE HOLY WORD OF GOD</p>
 <p class="p19"> I FOUND A PAPER CAT, I THINK ITS A BABY, I FOUND IT IN THE TREES, ITS EYES ARE BLUE, I PHOTOCOPY IT HERE LOOK <img src="assets/papsmear.png" width="400px" height="200px"/>(Not acurat Size i'mm Sorry)</p>
 <p class="p18"> I am going today to prov e the papercat To find one and Bring it home with me To figure Out their' Weakness</p>
