--- a/code.html
+++ b/code.html
@@ -10,28 +10,29 @@
 	body {background-color:#008080;color:#fdffff}
 	.white {color:rgba(0,0,0,0)}
 	th{text-align: center;font-weight: normal}
-	.links{background-color: #818181;color: fdffff;padding: 5px 100px;text-align: center;text-decoration: none;display: inline-block;outline-color: #818181;outline-style: outset;}
+	.links{background-color: #818181;color: fdffff;padding: 5px 100px;text-align: center;text-decoration: none;display: inline-block;outline-color: #818181;outline-width: 5px;outline-style: outset;}
 	a{color:#010081; text-decoration: none;}
-	button{background-color: #818181;outline-color: #818181;outline-style: outset;}
+	button{background-color: #818181;outline-color: #818181;outline-width: 5px;outline-style: outset;border:none;}
 	.top{
 		background-color: #c3c3c3;
-		width: 90%;
-		outline-color: #818181;
+		width: 1400px;
+		outline-color: #c3c3c3;
 		outline-style: outset;
+        outline-width: 5px;
 		padding-top: 5px;
 		padding-bottom: 5px;
-		box-shadow: 5px 5px #2a5f55;
+		box-shadow: 10px 10px #2a5f55;
 	}
 	.middle{
 		background-color: #c3c3c3;
 		width: 700px;
-		height: 500px;
-		outline-color: #818181;
+		height: 600px;
+		outline-color: #c3c3c3;
 		outline-style: outset;
-		padding-top: 25px;
-		padding-bottom: 25px;
+		padding: 25px;
+        outline-width: 5px;
 		position: relative;
-		box-shadow: 5px 5px #2a5f55;
+		box-shadow: 10px 10px #2a5f55;
 	}
 	h1{
 		text-shadow:
@@ -65,6 +66,10 @@
 
 <br><br>
 
+<a href="">Page Deepfrier</a> (Bookmark thing)
+
+<br><br>
+
 <a href='ms-calculator://'> click here ;) </a>
 
 <br><br>
@@ -85,7 +90,7 @@
 <td><span id="slidey"></span></td>
 </tr>
 </table>
-<div id="Gradient" style="outline-color: #818181;outline-style: outset;height:100px;width:75%;background-image:repeating-linear-gradient(90deg, #000000,#000000 10px,#ff0081 10px,#ff0081 20px);">
+<div id="Gradient" style="outline-color: #818181;outline-width: 5px;outline-style: outset;height:100px;width:75%;background-image:repeating-linear-gradient(90deg, #000000,#000000 10px,#ff0081 10px,#ff0081 20px);">
 </div>
 </div>
 <script>
@@ -98,8 +103,19 @@ slider.oninput = function() {
   gradient.style.backgroundImage = "repeating-linear-gradient(90deg, #000000,#000000 "+this.value+"px,#ff0081 "+this.value+"px,#ff0081 "+this.value*2+"px)";
 }
 </script>
-
-
+<br><br><br>
+<div style="font-size: 0">
+<span style="-webkit-filter: hue-rotate(32deg); font-size: 50;">S</span>
+<span style="-webkit-filter: hue-rotate(64deg); font-size: 50;">E</span>
+<span style="-webkit-filter: hue-rotate(96deg); font-size: 50;">L</span>
+<span style="-webkit-filter: hue-rotate(128deg); font-size: 50;">E</span>
+<span style="-webkit-filter: hue-rotate(160deg); font-size: 50;">C</span> 
+<span style="-webkit-filter: hue-rotate(192deg); font-size: 50;">T</span>
+<span style="-webkit-filter: hue-rotate(224deg); font-size: 50;">M</span>
+<span style="-webkit-filter: hue-rotate(256deg); font-size: 50;">E</span>
+<span style="-webkit-filter: hue-rotate(288deg); font-size: 50;">:</span>
+<span style="-webkit-filter: hue-rotate(320deg); font-size: 50;">3</span>
+</div>
 </div>
 </center>
 <div id="funny">
