--- a/pride.html
+++ b/pride.html
@@ -274,6 +274,10 @@
 				#732982 83.2%
 			);
 	}
+	.progress {
+        position: absolute;
+        background: #00000055;
+	}
 	.agender {
 		background-image: 
 			linear-gradient(
@@ -329,7 +333,10 @@
 	<br>
 
 <center>
+<!--okay im going to bed and i haven't finished this i hope i don't accidently leave it broken and then push the changes broken <br>
+if you see this text and its black and **not commented** dm me lmfao-->
 <p class="pride"></p>
+<!--<p style="position:relative"><p class="pride" style="position:absolute;"></p><p class="progress"></p></span>-->
 <p class="trans"></p>
 <p class="enby"></p>
 <p class="bi"></p>
