--- a/scrap.html
+++ b/scrap.html
@@ -103,8 +103,8 @@
 	}	
 	</style>
 	<script>
-	 // confirm("Hello can you \"Please\" Join my Gift Crad GiverWay?!");
-	//confirm("this Page contains Flashing Lights!!!!!!!! Whoops!");
+	confirm("Hello can you \"Please\" Join my Gift Crad GiverWay?!");
+	confirm("this Page contains Flashing Lights!!!!!!!! Whoops!");
 	function farton(x){
 		x.src = "assets/art/silverad2.png";	
 	}
@@ -140,4 +140,5 @@ aweitgjowkeoakoqwekaowkeptawektowakopekraowkroawekqw
 ew<br>qwoeQQEOQWEKqoek
 </center>
 </body>
+<a href="unfunny.html">.</a>
 <a href="GIVEMESOMEBODYTO.......html">if i keep the text as no body it will look like i forgot about it but i want it to be the same so</a>
