--- a/code.html
+++ b/code.html
@@ -49,7 +49,7 @@
 	</script>
 </head>
 
-<div> <!--class=""-->
+<div id="p2"> <!--class=""-->
 <center>
 	<br>
 	<div class="top">
@@ -66,7 +66,7 @@
 
 <br><br>
 
-<a href="">Page Deepfrier</a> (Bookmark thing)
+<a href="javascript:void(function(){ a = '10000%'; document.getElementsByTagName('body')[0].style.filter = 'contrast('+a+')'; })();">Page Deepfrier</a> (Bookmark thing)
 
 <br><br>
 
