--- a/aboutthem.html
+++ b/aboutthem.html
@@ -8,7 +8,7 @@
 	</script>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 	<style>
-	html, body {margin:0;padding:0;background-color:#000000;}
+	html, body {margin:0;padding:0;background-color:#000000;position:relative;}
 	.header {background-image:linear-gradient(#000000 10%,#FFFFFF 20%, rgba(0, 0, 0, 0) 30%)}
 	.encompass {
 		background-image: url("assets/img/glitter.gif");
@@ -102,6 +102,12 @@
         background-color: #000000;color: white;padding: 5px 75px;text-align: center;text-decoration: none;display: inline-block;outline: #66ff00 solid 3px;
         background-image: url('https://dl.glitter-graphics.com/pub/438/438519pbkgy83en0.jpg ');
         background-size: 50px;
+    }
+    .doorway{
+        position: absolute;
+        width: 100px;
+        bottom:0px;
+        right:0px;
     }
 	</style>
 </head>
@@ -311,7 +317,8 @@ WATCH THE NEW STAR DANCE UPON THE NIGHT SKY<br>
 </div> 
 </div>
 </div>
-<img src="assets/img/black.gif" width="5" height="6"></img>
+<img src="assets/img/black.gif" width="5px" height="6px"/>
+<a href="cuddles.html"><img src="assets/art/doorway.gif" class="doorway"/></a>
 live strange get ):PL!{W: (gg for finding this?)
-<img src="https://i7.glitter-graphics.org/pub/2701/2701407d0cc3f575j.gif" width="100%" height="25%" style="transform: scaleY(-1); position: sticky; bottom:0; right:0;"/>
+<img src="https://i7.glitter-graphics.org/pub/2701/2701407d0cc3f575j.gif" width="100%" height="25%" style="transform: scaleY(-1); position: sticky; bottom:0; right:0; pointer-events: none;"/>
 </body>
