--- a/unfunny.html
+++ b/unfunny.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="the unfunny code">
 	<!--<link rel="icon" type="image/x-icon" href="assets/favicon.ico">-->
 	<style>
-	html, body {margin:0;padding:0;}
+	html, body {margin:0;padding:0; position: relative;}
 	.header {background-image:linear-gradient(#ab0194 , rgba(0, 0, 0, 0))}
 	.footer {background-image:linear-gradient(rgba(0, 0, 0, 0), #550000 )}
 	.ody {background-image: linear-gradient(#ab0100, black);color:#444444}
@@ -18,13 +18,24 @@
 	p{color:#550000 }
 	.funnyman{
 		font-size: 500px;
-        filter: hue-rotate(240deg);
+        filter: saturate(1);
 		text-shadow:
-		-25px -25px 0 #000,
-		25px 25px 0 #000,
-		25px -25px 0 #ff0000,
-		-25px 25px 0 #ff0000
-        
+-10px -10px 0 #000, 10px 10px 0 #000, 10px -10px 0 #ff0000, -10px 10px 0 #ff0000,
+-15.0px -15.0px 0 #000, 15.0px 15.0px 0 #000, 15.0px -15.0px 0 #ff0000, -15.0px 15.0px 0 #ff0000,
+-22.0px -22.0px 0 #000, 22.0px 22.0px 0 #000, 22.0px -22.0px 0 #ff0000, -22.0px 22.0px 0 #ff0000,
+-33.0px -33.0px 0 #000, 33.0px 33.0px 0 #000, 33.0px -33.0px 0 #ff0000, -33.0px 33.0px 0 #ff0000,
+-50.0px -50.0px 0 #000, 50.0px 50.0px 0 #000, 50.0px -50.0px 0 #ff0000, -50.0px 50.0px 0 #ff0000,
+-75.0px -75.0px 0 #000, 75.0px 75.0px 0 #000, 75.0px -75.0px 0 #ff0000, -75.0px 75.0px 0 #ff0000,
+-112.0px -112.0px 0 #000, 112.0px 112.0px 0 #000, 112.0px -112.0px 0 #ff0000, -112.0px 112.0px 0 #ff0000,
+-168.0px -168.0px 0 #000, 168.0px 168.0px 0 #000, 168.0px -168.0px 0 #ff0000, -168.0px 168.0px 0 #ff0000,
+-252.0px -252.0px 0 #000, 252.0px 252.0px 0 #000, 252.0px -252.0px 0 #ff0000, -252.0px 252.0px 0 #ff0000,
+-378.0px -378.0px 0 #000, 378.0px 378.0px 0 #000, 378.0px -378.0px 0 #ff0000, -378.0px 378.0px 0 #ff0000,
+-567.0px -567.0px 0 #000, 567.0px 567.0px 0 #000, 567.0px -567.0px 0 #ff0000, -567.0px 567.0px 0 #ff0000,
+-850.0px -850.0px 0 #000, 850.0px 850.0px 0 #000, 850.0px -850.0px 0 #ff0000, -850.0px 850.0px 0 #ff0000,
+-1275.0px -1275.0px 0 #000, 1275.0px 1275.0px 0 #000, 1275.0px -1275.0px 0 #ff0000, -1275.0px 1275.0px 0 #ff0000,
+-1912.0px -1912.0px 0 #000, 1912.0px 1912.0px 0 #000, 1912.0px -1912.0px 0 #ff0000, -1912.0px 1912.0px 0 #ff0000,
+-2868.0px -2868.0px 0 #000, 2868.0px 2868.0px 0 #000, 2868.0px -2868.0px 0 #ff0000, -2868.0px 2868.0px 0 #ff0000,
+-4302.0px -4302.0px 0 #000, 4302.0px 4302.0px 0 #000, 4302.0px -4302.0px 0 #ff0000, -4302.0px 4302.0px 0 #ff0000
     }
 	.blocked {
 		pointer-events: none;
@@ -37,37 +48,37 @@
 <div class="header">
 	<br>
 	<center>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
-	<h1 style="color:#000"> the unfunny code </h1>
+	<h1 style="color:#f00"> the unfunny code </h1>
+	<h1 style="color:#e00"> the unfunny code </h1>
+	<h1 style="color:#d00"> the unfunny code </h1>
+	<h1 style="color:#c00"> the unfunny code </h1>
+	<h1 style="color:#b00"> the unfunny code </h1>
+	<h1 style="color:#a00"> the unfunny code </h1>
+	<h1 style="color:#900"> the unfunny code </h1>
+	<h1 style="color:#800"> the unfunny code </h1>
+	<h1 style="color:#700"> the unfunny code </h1>
+	<h1 style="color:#600"> the unfunny code </h1>
+	<h1 style="color:#500"> the unfunny code </h1>
+	<h1 style="color:#400"> the unfunny code </h1>
+	<h1 style="color:#300"> the unfunny code </h1>
+	<h1 style="color:#200"> the unfunny code </h1>
+	<h1 style="color:#100"> the unfunny code </h1>
+	<h1 style="color:#001"> the unfunny code </h1>
+	<h1 style="color:#002"> the unfunny code </h1>
+	<h1 style="color:#003"> the unfunny code </h1>
+	<h1 style="color:#004"> the unfunny code </h1>
+	<h1 style="color:#005"> the unfunny code </h1>
+	<h1 style="color:#006"> the unfunny code </h1>
+	<h1 style="color:#007"> the unfunny code </h1>
+	<h1 style="color:#008"> the unfunny code </h1>
+	<h1 style="color:#009"> the unfunny code </h1>
+	<h1 style="color:#00a"> the unfunny code </h1>
+	<h1 style="color:#00b"> the unfunny code </h1>
+	<h1 style="color:#00c"> the unfunny code </h1>
+	<h1 style="color:#00d"> the unfunny code </h1>
+	<h1 style="color:#00e"> the unfunny code </h1>
+	<h1 style="color:#00f"> the unfunny code </h1>
+	<h1 style="color:#000"> (So wacky they don't even) </h1>
 	</center>
 	<br>
 </div>
@@ -78,9 +89,9 @@
 </center>
 </div>
 <center>
-<img src="assets/unfunnycode.png" width="100px">
-
-<!--<div class="funnyman">😆😡</div> huerotate is bs and doesn't do its job right-->
-
+<img src="assets/unfunnycode.png" width="100px"><br><br><br><br><br><br><br><br><br>
+<div class="unfunnyman"></div>
+<div class="funnyman">😡</div><!-- huerotate is bs and doesn't do its job right-->
 </center>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
