--- a/code.html
+++ b/code.html
@@ -66,7 +66,7 @@
 
 <br><br>
 
-<a href="javascript:void(function(){ a = '10000%'; document.getElementsByTagName('body')[0].style.filter = 'contrast('+a+')'; })();">Page Deepfrier</a> (Bookmark thing)
+<a href="javascript:void(function(){ a = '10000%'; document.getElementsByTagName('html')[0].style.filter = 'contrast('+a+')'; })();">Page Deepfrier</a> (Bookmark thing)
 
 <br><br>
 
