--- a/abouthim.html
+++ b/abouthim.html
@@ -69,7 +69,7 @@
 	button{background-color: #E94560}
 	h1{
 	    color: E94560;
-		-webkit-box-reflect: below 1500px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,1));
+		-webkit-box-reflect: above -25px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,1));
 		text-shadow:
 		-2px -2px 0 #16213E,
 		2px -2px 0 #16213E,
@@ -285,6 +285,7 @@ AUDI_!))!
 <br>
 <a href="https://you-win-the-internet.com/?n=Silly915">Give me an internet</a>(i goej the <a href="https://you-win-the-internet.com/leaderboard.php">LEADERBOA</a>)
 <br>
+<a href='http://internetometer.com/give/49325'><img src='http://internetometer.com/image/49325.png'/></a>
 <br>
 <br>
 <br>
