--- a/THETRUTH.html
+++ b/THETRUTH.html
@@ -164,9 +164,30 @@
 <p onclick="silly();" class="p2">THIS IS THE TRUTH BE HIND SILVER SHORTHAIR</p>
 </center>
 <center>
-<br>
-<br>
 <div class="coldtruth">
+I will now build a l
+<br>
+so the silvers They say, they ae SO FAKE and  not REAL and they D ON TO Q PWEPQWSAdlsaSDLQPE
+<div style="font-size:50px;">
+[
+<br>
+i would name it "Lose the Faith in the Silvers" as a MOCKERY of the governments ATTEMPTS to make people more INDULGING of the PAPER CATYS
+<br><br>
+Video games like "Find the "Silvers"" is a way for the government to <u>Indoctrinate t</u>he YOUTH into liking Paper cáts
+<br>
+i should make my Own "VIdeo game" so that the youth will know the FACCTS about the paper cat population and there <i>DETRIMENTAL impact on the p population of AMERICAS WILDLIFE</i>
+</div>
+Back to my home now;;; they "Freed" my <s>paper cat</s> DEMON that i had lOCKEDU P <br> They want the Chaos
+<br> they want the demons to wreak   havocks 
+<br> i think the govermnent is With satan. With satan and they will rule the WORLD!
+<br> I believe that the paper cats are     a form of their popjulation control big vet doesn't want us to know Thabout 
+
+<h1>i am   finish my sentence for "ANimal Abuse"  " "   the court deemed me "MEntal" for seeking the TRUTH!<br>
+I will show them Mental when i go back there and <br>
+when i go show them the PAPRER CATS are SHOULD DIE<br>
+DEath to the PAER CAT <br>
+</h1>
+
 <h2> i don't the paper cat </h5>
 <p> i cannot be forgiven, i have Stepped to Far . But i must do what i must :t o save the wolrd from these Paping cats</p>
 <br>
@@ -191,7 +212,7 @@
 <h2> wikipedia the "FREE" encyclopedia keeps REMOVING my ARTCILES about PAPER CAT </h2>
 <p> what Paper cats Do to People <br> - car Accidents <br> - vagoniplasty <br> - Get rid of Morales <br> - not natural <br> - remove Babies <br> - What paper cats Do to peopel and this IS why you should Donate now to ERADICATE papre Cat</p>
 <p class="p20">i am going to going to Experioment on this Ppper Cat ( ((  i m gOing to figureo ut its WOrks how To figure Out its INsides. I am going to Find Out Scientifically and REligiously What the PAPER CAT is ?! ?and how to CLEANSE IT FROM this World! i am going to EXTERMINATE all the PAPER CAATS i aam Going to FInd out Their WEaknes AND I AM GOING TO BECAUSE THEY ARE DEMONS AND BECAUSE THEY ARE AGAINST THE HOLY WORD OF GOD</p>
-<p class="p19"> I FOUND A PAPER CAT, I THINK ITS A BABY, I FOUND IT IN THE TREES, ITS EYES ARE BLUE, I PHOTOCOPY IT HERE LOOK <img src="assets/papsmear.png" width="400px" height="200px"/>(Not acurat Size i'mm Sorry)</p>
+<p class="p19"> I FOUND A PAPER CAT, I THINK ITS A BABY, I FOUND IT IN THE TREES, ITS EYES ARE <u>BLUE</u>, I PHOTOCOPY IT HERE LOOK <img src="assets/papsmear.png" width="400px" height="200px"/>(Not acurat Size i'mm Sorry)</p>
 <p class="p18"> I am going today to prov e the papercat To find one and Bring it home with me To figure Out their' Weakness</p>
 <p class="p17"> there is a paper cat she name the silver short... Silver shorthair Silver short "hair" despit having NO HAIR" what is this Name? is it a Fake name? Is silver Even a Name you Would Give You Your Child ??? ? ? ?? ? ? ?</p>
 <p class="p16">they told me today I was good at Researching the Paper Cat! {{{{{{ I WIll " Answer YOur questions if you Email _Me Me</p>
@@ -201,17 +222,17 @@
 <p class="p12">i have Consumed all the Silver_Shorthair Media avaliable Right NOw(7:20PM) and Cannot FInd the REAl DEATH of SILVER SHORTHAIR weaKNESS!!!!! but I did figure out that there is No Finding Game 3!!! (One With the Silver) And i am Curus! P PP P PP I WANT THIS CREATURE D_EAD-</p>
 <p class="p11">day 1 0 of Trying to find the weakenes Of silver Shorting ! ! So basicall THere is a Paper Cat And she is Called "SIlver SHORTHAIR" and shes a D*MON from H*LL that FUCKS US ALL over by bEING FLAT AND D*MONIC</p>
 <p class="p10">I MUST DESTROY THE PIPPY CIT</p>
-<p class="p9"><b>&dagger;&dagger;&dag</b>ger;<--- this is what SILVER The DEMON hides behind she hides behind this FORM she is the NOT THIS she is NOT THIS THIS IS A FAKE AN ILLUSION THIS IS NOT THE REAL PERSON THIS IS NOT REAL A DEMON IS HIDNIG BEHIND THIS YOU CANOT SE HIM BUT she IS IA DEMON AND YOU SHOULD NOT TRUST HIM DO NOT TRUST HIM TO NO  D TRUSH HIM she OT TIRSH HIM OD NOT TRUSH TH DO NOT TRUST THIS MAN (aka. Etc)    )) )  [sic]</p>
+<p class="p9"><b>&dagger;&dagger;&dag</b>ger;<--- this is what SILVER The DEMON hides behind she hides behind this FORM she is the NOT THIS she is NOT THIS THIS IS A FAKE AN ILLUSION THIS IS NOT THE REAL PERSON THIS IS NOT REAL A DEMON IS HIDNIG BEHIND THIS YOU CANOT SE her BUT she IS IA DEMON AND YOU SHOULD NOT TRUST her DO NOT TRUST her TO NO  D TRUSH her she OT TIRSH her OD NOT TRUSH TH DO NOT TRUST THIS MAN (aka. Etc)    )) )  [sic]</p>
 <p class="p8">if you are READING this and you AGREE With the what i say then plea CONTACT ME at <span id="email">😀</span> and we can ARRANGE a meeting and we can Discuss and TAKE ACTION to the SILVER DEMOS ! ! </p>
 <p class="p7">"cats" are DOMANS sent from h*ll to RUIN our lives and fill them with SIN and GREED, but someimes the DEMONS fuck it up  (really Bad) this sometimes and okay and it sometimes this happens and this is why there is a "SIVLER SHORHTAIR" she is a cat but they accidently made her made of PAPER! Oopsies! THEY ARE STUPID! AND DEMON! </p>
 <p class="p6">i don't relaly understand "ppare cat"</p>
 </div>
 <p class="p5">You may havbe heard of silvers suppsoed breed being "British Silver Shortahir' but ijn reality this is merely a coverup to hide her otherwise blatant and obvious true identity of one of the "british Big Cats" (Ak.a ABCs, phanton cats,  etc)  These of race are big cats that used to prowel the earth. and they STILL EXIST but "sicentists" say they AREN"T EXIST! BOO SCIE BN!</p>
 <p class="p4">silvershorthair is a time traveller from another dimenson who is here to take all the money from the libertarian party and to defund the police and to make abortions legal and we must stop her by spreading this word to 10 sites and she is a demonic entity possessing a a4 sheat of paper because she has no organs and she </p>
-<p class="p3">"Silver Shorthair" AS you MAY know her exists since aLL Of time and she appears IN LOTs of Media since the DAWN OF TIME and it was CREATED by the 9 ONAGON SAGES and it is CURSED and you SHOULDN"T INTERACT WITH IT. she is a Pieceo f paper resembLing a cat and that shouldn't happen and is illogical and dumb. Silver shouldn't exist as she is flat and therefore she has no, ORGANS and therefore the only LOGICAL expliNATION os that she is POSSSED; by some EVIL ENTITY and thats BAD because she will BETRAY YOU and she WILL AT NO END SEEK TO DESTRYOY YOU AND KILL YOU FOR her OWN PERSON AL GAINS!!! ! !</p>
+<p class="p3"><b>"Silver Shorthair"</b> AS you MAY know her exists since aLL Of time and she appears IN LOTs of Media since the DAWN OF TIME and it was CREATED by the 9 ONAGON SAGES and it is CURSED and you SHOULDN"T INTERACT WITH IT. she is a Pieceo f paper resembLing a cat and that shouldn't happen and is illogical and dumb. Silver shouldn't exist as she is flat and therefore she has no, ORGANS and therefore the only LOGICAL expliNATION os that she is POSSSED; by some EVIL ENTITY and thats BAD because she will BETRAY YOU and she WILL AT NO END SEEK TO DESTRYOY YOU AND KILL YOU FOR her OWN PERSON AL GAINS!!! ! !</p>
 <img src="assets/ohgod2.png" width="480px" style="background-image: url('https://media.timeout.com/images/105222685/750/562/image.jpg');background-repeat: no-repeat;background-size: cover;">
 <br>
-<i>Above: proof that "SILVER SHORTHAIR" is a time traveling DEAMON!!!! (photo credit: wikipedia, i think)</i>
+<i>Above: proof that "SILVER SHORTHAIR" is a time traveling <u>DEAMON!!!!</u> (photo credit: wikipedia, i think)</i>
 <h2>™™©™™™™™™™™™™™™™™™®™</h2>
 </center>
 like an idiot, like an idiot
